cmake_minimum_required(VERSION 3.5)

# Set the project name
project (timer_samples)
# coverage option
# OPTION (ENABLE_COVERAGE "Use gcov" OFF)
# MESSAGE(STATUS ENABLE_COVERAGE=${ENABLE_COVERAGE})
# IF(ENABLE_COVERAGE)
#     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
#     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -ftest-coverage")
#     # 其中 -fprofile-arcs 用来生成 gcno 文件； -ftest-coverage 用来在统计时生成 gcda 文件
#     SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fprofile-arcs -ftest-coverage") 
# ENDIF()

add_executable(timer_samples src/main.cpp src/Timer.cpp)

target_link_libraries(timer_samples
pthread)
